--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
 <body>
     <h1>Registration Form</h1>
     <p>Please fill out this form with the required information</p>
+    <form action="https://fcc-registration-form.com">
+        <fieldset>
+            <label>Enter Your First Name: <input type="text" name="account-type"> Personal Account</label>
+            <label>Enter Your Last Name: <input type="text" name="account-type"> Business Account</label>
+            <label>Enter Your Email: <input type="email" required> I accept the<a
+                    href="https://www.freecodecamp.org/news/terms-of-service/"> terms and conditions</a></label>
+            <label>Create a New Password: <input type="password" required pattern="[a-z0-5]{8,}"></label>
+        </fieldset>
+        <fieldset>
+            <label>
+                <input type="radio">
+            </label>
+            <label>
+                <input type="radio">
+            </label>
+            <label>
+                <input type="checkbox" required>
+            </label>
+        </fieldset>
+        <fieldset>
+            <label> Upload a profile picture: <input type="file"></label>
+        </fieldset>
+        <input type="submit" value="Submit">
+    </form>
 
 </body>
 
